# n1os

./: .gitignore  Dockerfile.build  build.sh  project.yml
N1OS/: ContentView.swift  N1OSApp.swift  Theme.swift
N1OS.xcodeproj/: project.pbxproj
N1OS.xcodeproj/project.xcworkspace/xcuserdata/nnavindu.xcuserdatad/: UserInterfaceState.xcuserstate
N1OS.xcodeproj/xcuserdata/nnavindu.xcuserdatad/xcschemes/: xcschememanagement.plist
N1OS/Assets.xcassets/AccentColor.colorset/: Contents.json
N1OS/Models/: AppWindow.swift  ChatMessage.swift  FileItem.swift  MusicTrack.swift
N1OS/ViewModels/: AIChatVM.swift  BrowserVM.swift  CalculatorVM.swift  DesktopVM.swift  FilesVM.swift  MessagingVM.swift  MusicVM.swift  NotesVM.swift  TerminalVM.swift
N1OS/Views/: AppDrawerView.swift  DockView.swift  FloatingWindowView.swift  HomeScreenView.swift  NotificationsView.swift  PhoneFrameView.swift  QuickSettingsView.swift  TopPanelView.swift
N1OS/Views/Windows/: AIChatWindow.swift  BrowserWindow.swift  CalculatorWindow.swift  CameraWindow.swift  FilesWindow.swift  MusicWindow.swift  NotesWindow.swift  RecorderWindow.swift  SettingsWindow.swift  SystemMonitorWindow.swift  TelegramWindow.swift  TerminalWindow.swift  VSCodeWindow.swift  WeChatWindow.swift
branding/: logo.txt  motd  os-release
configs/: kernel_pinephone.config  uboot_pinephone_defconfig
n1shell/: meson.build
n1shell/src/: app_switcher.c  compositor.c  config.c  home_screen.c  input.c  main.c  n1shell.h  physics.c  render.c  tile.c
rootfs/: setup_rootfs.sh
scripts/: build_kernel.sh  build_uboot.sh  mkimage.sh
